--- a/AngularCore/ClientApp/app/components/employee/fetchemployee.component.html
+++ b/AngularCore/ClientApp/app/components/employee/fetchemployee.component.html
@@ -4,6 +4,7 @@
 </ol>
 <div class="clearfix"></div>
 <p *ngIf="!empList"><em>Loading...</em></p>
+<!-- 查询 -->
 <div class="panel panel-primary">
     <div class="panel-heading"></div>
     <div class="panel-body">
@@ -46,8 +47,8 @@
         <!--<a class="btn btn-primary" [routerLink]="['/register-employee']">新建</a>-->
     </div>
 </div>
-<div class="clearfix"></div>
 <div class="table-responsive">
+    <!-- 表单 -->
     <table class='table table-striped table-bordered table-hover' *ngIf="empList">
         <thead>
             <tr>
@@ -67,24 +68,41 @@
                 <td>{{ emp.department }}</td>
                 <td>{{ emp.city }}</td>
                 <td>
-                    <a class="btn btn-primary" data-toggle="modal" data-target="#empEidtModal" [routerLink]="" (click)="edit(emp.employeeId)">编辑</a>
-                    <a class="btn btn-danger" (click)="delete(emp.employeeId)">删除</a>
+                    <a class="btn btn-primary" data-toggle="modal" data-target="#empEidtModal" (click)="edit(emp.employeeId)">编辑</a>
+                    <a class="btn btn-danger" data-toggle="modal" data-target="#empDeleteModal" (click)="delete(emp.employeeId)">删除</a>
                 </td>
             </tr>
         </tbody>
     </table>
-    <ul class="pagination">
-        <li><a href="#">&laquo;</a></li>
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#">&raquo;</a></li>
-    </ul>
+    <!-- 分页 -->
+    <nav aria-label="Page navigation">
+        <ul class="pagination">
+            <li class="page-item disabled">
+                <a class="page-link" href="#" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                    <span class="sr-only">Previous</span>
+                </a>
+            </li>
+            <li class="page-item active">
+                <span class="page-link">
+                    1<span class="sr-only">(current)</span>
+                </span>
+            </li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item"><a class="page-link" href="#">4</a></li>
+            <li class="page-item"><a class="page-link" href="#">5</a></li>
+            <li class="page-item">
+                <a class="page-link" href="#" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
 </div>
 
-<!-- EditModal -->
+<!-- 编辑Modal -->
 <div class="modal fade" id="empEidtModal" tabindex="-1" role="dialog" aria-labelledby="empEidtModal" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
@@ -138,7 +156,7 @@
                             </select>
 
                         </div>
-                        <div class="alert alert-danger" role="alert" *ngIf="employeeForm.hasError('required', 'city') && formDir.submitted">
+                        <div class="text-danger" role="alert" *ngIf="employeeForm.hasError('required', 'city') && formDir.submitted">
                             城市必填
                         </div>
                     </div>
@@ -147,6 +165,28 @@
                         <button type="submit" class="btn btn-primary">保存</button>
                     </div>
                 </form>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!-- 删除Modal -->
+<div class="modal fade bs-example-modal-sm" id="empDeleteModal" tabindex="-1" role="dialog" aria-labelledby="empDeleteModal" aria-hidden="true">
+    <div class="modal-dialog modal-sm" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close close1" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h3 class="modal-title" id="empDeleteModal">员工信息删除</h3>
+            </div>
+            <div class="modal-body">
+                您确定要删除吗？
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn btn-secondary" data-dismiss="modal">取消</button>
+                <button type="button" class="btn btn-primary" (click)="save()">确定</button>
             </div>
         </div>
     </div>
