--- a/AngularCore/ClientApp/app/components/employee/fetchemployee.component.html
+++ b/AngularCore/ClientApp/app/components/employee/fetchemployee.component.html
@@ -17,7 +17,7 @@
                 <div class="form-group col-sm-3">
                     <label for="employeegender">性别</label>
                     <select class="form-control" id="employeegender">
-                        <option value="">-- 请选择 --</option>
+                        <option value="">--请选择--</option>
                         <option value="Male">男</option>
                         <option value="Female">女</option>
                     </select>
@@ -31,7 +31,7 @@
                 <div class="form-group col-sm-3">
                     <label for="employeecity">城市</label>
                     <select class="form-control" data-val="true" id="employeecity">
-                        <option value="">-- 请选择 --</option>
+                        <option value="">--请选择--</option>
                         <option *ngFor="let city of cityList" value={{city.cityName}}>
                             {{city.cityName}}
                         </option>
@@ -39,8 +39,8 @@
                 </div>
             </div>
             <div class="form-group">
-                <button type="button" class="btn btn-default">查询</button>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#empEidtModal">新建</button>
+                <button type="button" class="btn btn-default" >查询</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#empEditModal" (click)="EmployeeEdit('Add',0)">新建</button>
             </div>
         </form>
 
@@ -68,8 +68,8 @@
                 <td>{{ emp.department }}</td>
                 <td>{{ emp.city }}</td>
                 <td>
-                    <a class="btn btn-primary" data-toggle="modal" data-target="#empEidtModal" (click)="edit(emp.employeeId)">编辑</a>
-                    <a class="btn btn-danger" data-toggle="modal" data-target="#empDeleteModal" (click)="delete(emp.employeeId)">删除</a>
+                    <a class="btn btn-primary" data-toggle="modal" data-target="#empEditModal" (click)="EmployeeEdit('Edit',emp.employeeId)">编辑</a>
+                    <a class="btn btn-danger" data-toggle="modal" data-target="#empDeleteModal" (click)="EmployeeEdit('Delete',emp.employeeId)">删除</a>
                 </td>
             </tr>
         </tbody>
@@ -103,14 +103,14 @@
 </div>
 
 <!-- 编辑Modal -->
-<div class="modal fade" id="empEidtModal" tabindex="-1" role="dialog" aria-labelledby="empEidtModal" aria-hidden="true">
+<div class="modal fade" id="empEditModal" tabindex="-1" role="dialog" aria-labelledby="empEditModal" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h3 class="modal-title" id="empEidtModal">员工信息{{title}}</h3>
+                <h3 class="modal-title" id="empEditModal">员工信息</h3>
             </div>
             <div class="modal-body">
                 <form [formGroup]="employeeForm" (ngSubmit)="save()" #formDir="ngForm" novalidate>
@@ -127,7 +127,7 @@
                         <label class="control-label col-md-12" for="Gender">性别</label>
                         <div class="col-md-4">
                             <select class="form-control" data-val="true" formControlName="gender">
-                                <option value="">-- 请选择 --</option>
+                                <option value="">--请选择--</option>
                                 <option value="Male">男</option>
                                 <option value="Female">女</option>
                             </select>
