--- a/AngularCore/ClientApp/app/components/employee/fetchemployee.component.html
+++ b/AngularCore/ClientApp/app/components/employee/fetchemployee.component.html
@@ -8,15 +8,15 @@
 <div class="panel panel-primary">
     <div class="panel-heading"></div>
     <div class="panel-body">
-        <form class="form-group">
+        <form class="form-group" [formGroup]="employeeSearch">
             <div class="row">
                 <div class="form-group col-sm-3">
                     <label for="employeename">姓名</label>
-                    <input type="text" class="form-control" id="employeename" placeholder="请输入姓名">
+                    <input type="text" class="form-control" id="employeename" placeholder="请输入姓名" formControlName="name">
                 </div>
                 <div class="form-group col-sm-3">
                     <label for="employeegender">性别</label>
-                    <select class="form-control" id="employeegender">
+                    <select class="form-control" id="employeegender" formControlName="gender">
                         <option value="">--请选择--</option>
                         <option value="Male">男</option>
                         <option value="Female">女</option>
@@ -26,11 +26,11 @@
             <div class="row">
                 <div class="form-group col-sm-3">
                     <label for="employeedepartment">部门</label>
-                    <input type="text" class="form-control" id="employeedepartment" placeholder="请输入部门">
+                    <input type="text" class="form-control" id="employeedepartment" placeholder="请输入部门" formControlName="department">
                 </div>
                 <div class="form-group col-sm-3">
                     <label for="employeecity">城市</label>
-                    <select class="form-control" data-val="true" id="employeecity">
+                    <select class="form-control" data-val="true" id="employeecity" formControlName="city">
                         <option value="">--请选择--</option>
                         <option *ngFor="let city of cityList" value={{city.cityName}}>
                             {{city.cityName}}
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <button type="button" class="btn btn-default" >查询</button>
+                <button type="button" class="btn btn-default" (click)="getEmployeeDate()">查询</button>
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#empEditModal" (click)="EmployeeEdit('Add',0)">新建</button>
             </div>
         </form>
@@ -52,6 +52,7 @@
     <table class='table table-striped table-bordered table-hover' *ngIf="empList">
         <thead>
             <tr>
+                <th>选择</th>
                 <th>员工编号</th>
                 <th>员工姓名</th>
                 <th>员工性别</th>
@@ -62,6 +63,7 @@
         </thead>
         <tbody>
             <tr *ngFor="let emp of empList">
+                <td><input type="checkbox" name="eheckEmployee" value="{{ emp.employeeId }}" /></td>
                 <td>{{ emp.employeeId }}</td>
                 <td>{{ emp.name }}</td>
                 <td>{{ emp.gender }}</td>
@@ -119,7 +121,7 @@
                         <div class="col-md-4">
                             <input class="form-control" type="text" placeholder="请输入" formControlName="name">
                         </div>
-                        <span class="text-danger" *ngIf="employeeForm.hasError('required', 'name') && formDir.submitted">
+                        <span class="text-danger" *ngIf="employeeForm.hasError('required', 'name') && formDir.submitted" [ngClass]="'error'">
                             姓名必填
                         </span>
                     </div>
@@ -169,7 +171,6 @@
         </div>
     </div>
 </div>
-
 
 <!-- 删除Modal -->
 <div class="modal fade bs-example-modal-sm" id="empDeleteModal" tabindex="-1" role="dialog" aria-labelledby="empDeleteModal" aria-hidden="true">
