--- a/AngularCore/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/AngularCore/ClientApp/app/components/navmenu/navmenu.component.html
@@ -13,7 +13,7 @@
         <div class='navbar-collapse collapse'>
             <ul class='nav navbar-nav'>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/user-List']">
+                    <a [routerLink]="['/userList']">
                         <span class='glyphicon glyphicon-home'></span> 用户管理
                     </a>
                 </li>
@@ -43,7 +43,7 @@
                     </a>
                 </li>
                 <li [routerLinkActive]="['link-active']">
-                    <a [routerLink]="['/fetch-employee']">
+                    <a [routerLink]="['/fetchEmployee']">
                         <span class='glyphicon glyphicon-th-list'></span> Fetch employee
                     </a>
                 </li>
