--- a/AngularCore/ClientApp/app/components/app/app.component.html
+++ b/AngularCore/ClientApp/app/components/app/app.component.html
@@ -1,5 +1,5 @@
 <div class='container-fluid'>
-    <div class='row'>
+    <div class='row' style="margin-left:-38px;margin-right:-15px;">
         <div class='col-sm-3'>
             <nav-menu></nav-menu>
         </div>
