--- a/AngularCore/ClientApp/app/components/navmenu/navmenu.component.html
+++ b/AngularCore/ClientApp/app/components/navmenu/navmenu.component.html
@@ -7,7 +7,7 @@
                 <span class='icon-bar'></span>
                 <span class='icon-bar'></span>
             </button>
-            <a class='navbar-brand' [routerLink]="['/home']">AngularCore</a>
+            <a class='navbar-brand' [routerLink]="['/home']">导航菜单</a>
         </div>
         <div class='clearfix'></div>
         <div class='navbar-collapse collapse'>
