--- a/AngularCore/Views/login/Index.cshtml
+++ b/AngularCore/Views/login/Index.cshtml
@@ -65,9 +65,9 @@
         <h1 class="h3 mb-3 font-weight-normal">OMS 采购订单管理系统</h1>
         <div class="form-label-group">
             <label for="inputEmail" class="sr-only">UserName</label>
-            <input type="text" id="inputUserName" class="form-control" placeholder="UserName" required autofocus>
+            <input type="text" id="inputUserName" name="inputUserName" class="form-control" placeholder="UserName" required autofocus>
             <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            <input type="password" id="inputPassword" name="inputPassword" class="form-control" placeholder="Password" required>
             <button class="btn btn-lg btn-primary btn-block" type="submit">登  陆</button>
         </div>
         <p style="height:150px"></p>
